bug fix database